# fast-disk-analyzer

./: .gitignore  Cargo.toml  LICENSE  README.md  schema.sql
src/: gui.rs  lib.rs  main.rs  view_cli.rs
