[package]
name = "fast-disk-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.42"
dioxus = { version = "0.6.3", features = ["macro", "hooks"], default-features = false }
env_logger = "0.11.8"
freya = "0.3.4"
kanal = "0.1.1"
log = "0.4.28"
num_cpus = "1.17.0"
rusqlite = {version ="0.37.0",features = ["bundled"]}
walkdir = "2.5.0"
